--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,48 +11,52 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - ecommerce-net
 
-  # --- SPRING CLOUD INFRASTRUCTURE ---
-  config-server:
-    build:
-      context: .
-      dockerfile: infrastructure/config-server/Dockerfile
-    container_name: config-server
+  kafka:
+    image: confluentinc/cp-kafka:7.6.1
+    hostname: kafka
+    container_name: kafka
     ports:
-      - "8888:8888"
+      - "9092:9092"
     environment:
-      - SPRING_PROFILES_ACTIVE=native
+      KAFKA_KRAFT_MODE: "true"
+      KAFKA_PROCESS_ROLES: "controller,broker"
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+      KAFKA_LISTENERS: "PLAINTEXT://kafka:9092,CONTROLLER://kafka:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      CLUSTER_ID: "ff9ffaf1-1b87-49b9-9ecc-c3c28a4822f0" # Generated UUID
+      KAFKA_LOG_DIRS: "/var/lib/kafka/data"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+    volumes:
+      - kafka_data:/var/lib/kafka/data
     networks:
       - ecommerce-net
 
-  eureka-server:
-    build:
-      context: .
-      dockerfile: infrastructure/eureka-server/Dockerfile
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-    environment:
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
-    depends_on:
-      - config-server
-    networks:
-      - ecommerce-net
-
+  # --- USER SERVICE ---
   user-service:
     build:
-      context: .
-      dockerfile: services/user-service/Dockerfile
+      context: services/user-service
+      dockerfile: Dockerfile
     container_name: user-service
     ports:
-      - "8081:8081"
+      - "8081:8080"
     environment:
-      - CONFIG_SERVER_URL=http://config-server:8888
-      - EUREKA_URL=http://eureka-server:8761/eureka
+      # Points directly to the postgres container
       - DB_HOST=postgres-db
       - DB_NAME=${POSTGRES_DB}
       - DB_USER=${POSTGRES_USER}
@@ -60,13 +64,30 @@ services:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
     depends_on:
       - postgres-db
-      - config-server
-      - eureka-server
     networks:
       - ecommerce-net
-
+  order-service:
+    build:
+      context: services/order-service
+      dockerfile: Dockerfile
+    container_name: order-service
+    ports:
+      - "8082:8080"
+    environment:
+      - DB_HOST=postgres-db
+      - DB_NAME=${POSTGRES_DB}
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASS=${POSTGRES_PASSWORD}
+    depends_on:
+      postgres-db:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+    networks:
+      - ecommerce-net
 volumes:
   postgres-data:
+  kafka_data:
 
 networks:
   ecommerce-net:
