--- a/services/user-service/pom.xml
+++ b/services/user-service/pom.xml
@@ -105,14 +105,31 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <version>6.2.3</version>
-            <scope>test</scope>
-        </dependency>
+                <dependency>
 
-    </dependencies>
+                    <groupId>org.springframework.security</groupId>
+
+                    <artifactId>spring-security-test</artifactId>
+
+                    <version>6.2.3</version>
+
+                    <scope>test</scope>
+
+                </dependency>
+
+                <!-- H2 Database for tests -->
+
+                <dependency>
+
+                    <groupId>com.h2database</groupId>
+
+                    <artifactId>h2</artifactId>
+
+                    <scope>test</scope>
+
+                </dependency>
+
+            </dependencies>
 
     <build>
         <plugins>
@@ -131,5 +148,25 @@
                         </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>test</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>-Dspring.profiles.active=test</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
