--- a/K8s/secrets.yaml
+++ b/K8s/secrets.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ecommerce-secrets
+  namespace: ecommerce
 type: Opaque
 stringData:
-  POSTGRES_USER: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: TW9zZUAxOTg=
-  POSTGRES_DB: ZWNvbW1lcmNlX2Ri
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: Mose@198
+  POSTGRES_DB: ecommerce_db
   JWT_SECRET_KEY: bXktc3VwZXItc2VjcmV0LWxvY2FsLXRlc3Rpbmcta2V5LXdoYWxwLWhhCg==
