canged order-service to use users endpoint internally

--- a/K8s/secrets.yaml
+++ b/K8s/secrets.yaml
@@ -9,3 +9,5 @@ stringData:
   POSTGRES_PASSWORD: Mose@198
   POSTGRES_DB: ecommerce_db
   JWT_SECRET_KEY: bXktc3VwZXItc2VjcmV0LWxvY2FsLXRlc3Rpbmcta2V5LXdoYWxwLWhhCg==
+  DOCKER_USERNAME: mosezac
+  DOCKER_PASSWORD: Mose@12055
