--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,49 +9,53 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-22.04
-
     env:
       DOCKER_USER: mosezac
       VERSION: v1.0.0
 
     steps:
-      # Checkout repo
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # Set up Java
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      # Login to docker Hub
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push user-service
-      - name: Build $ Push user-service
-        run:
+      # --- BUILD USER SERVICE ---
+      - name: Build & Push user-service
+        run: | 
           cd services/user-service
-          mvn -B package --file pom.xml
-          docker build -t $DOCKER_USER/user-service:latest
-          docker tag @DOCKER_USER/user-service:latest $DOCKER_USER/user-service:${VERSION}
+          mvn -B package --file pom.xml -DskipTests
+          docker build -t $DOCKER_USER/user-service:latest .  # <--- FIXED: Added "." at the end
+          docker tag $DOCKER_USER/user-service:latest $DOCKER_USER/user-service:$VERSION # <--- FIXED: Removed typo "@"
           docker push $DOCKER_USER/user-service:latest
-          docker push $DOCKER_USER/user-service:${VERSION}
+          docker push $DOCKER_USER/user-service:$VERSION
 
-        # Build and push order-service
-      - name: Build $ Push user-service
-        run:
-          cd services/user-service
-          mvn -B package --file pom.xml
-          docker build -t $DOCKER_USER/order-service:latest
-          docker tag @DOCKER_USER/order-service:latest $DOCKER_USER/order-service:${VERSION}
+      # --- BUILD ORDER SERVICE ---
+      - name: Build & Push order-service
+        run: |  
+          cd services/order-service  # <--- FIXED: Was incorrectly pointing to "user-service"
+          mvn -B package --file pom.xml -DskipTests
+          docker build -t $DOCKER_USER/order-service:latest .
+          docker tag $DOCKER_USER/order-service:latest $DOCKER_USER/order-service:$VERSION
           docker push $DOCKER_USER/order-service:latest
-          docker push $DOCKER_USER/order-service:${VERSION}
+          docker push $DOCKER_USER/order-service:$VERSION
+
+      # --- BUILD PRODUCT SERVICE (Added for completeness based on our chat) ---
+      - name: Build & Push product-service
+        run: |
+          cd services/product-service
+          mvn -B package --file pom.xml -DskipTests
+          docker build -t $DOCKER_USER/product-service:latest .
+          docker push $DOCKER_USER/product-service:latest
 
   deploy:
     name: Deploy to Kubernetes
@@ -71,23 +75,28 @@ jobs:
         run: |
           mkdir -p ~/.kube
           echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
+          chmod 600 ~/.kube/config
 
       - name: Deploy to cluster
         run: |
-          kubectl apply -f K8s/order-service/deployment.yaml
-          kubectl apply -f K8s/order-service/service.yaml
-          kubectl apply -f K8s/user-service/deployment.yaml
-          kubectl apply -f K8s/user-service/service.yaml
-          kubectl apply -f K8s/postgres/postgres.yaml
-          kubectl apply -f K8s/namespace.yaml
+          # 1. Namespace must exist first!
+          kubectl apply -f K8s/namespace.yaml || true
+          
+          # 2. Secrets & Configs
           kubectl apply -f K8s/secrets.yaml
-          kubectl apply -f K8s/ingress/ingress.yaml
+          kubectl apply -f K8s/postgres/postgres.yaml
+          
+          # 3. Services (Order matters less here, but good to group)
+          kubectl apply -f K8s/user-service/service.yaml
+          kubectl apply -f K8s/user-service/deployment.yaml
+          
+          kubectl apply -f K8s/order-service/service.yaml
+          kubectl apply -f K8s/order-service/deployment.yaml
 
-      - name: Restart Deployment (Pull a new image)
+          kubectl apply -f K8s/product-service.yaml
+
+      - name: Restart Deployments
         run: |
           kubectl rollout restart deployment order-service -n ecommerce
-          kubectl rollout restart deployment user-service-n ecommerce
-          
-
-
-
+          kubectl rollout restart deployment user-service -n ecommerce # <--- FIXED: Added missing space
+          kubectl rollout restart deployment product-service -n ecommerce
